--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -26,7 +26,7 @@
         android:paddingEnd="10dp">
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/sign_up_name"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:layout_marginTop="50dp"
@@ -48,7 +48,7 @@
             android:padding="8dp" />
 
         <EditText
-            android:id="@+id/login_password"
+            android:id="@+id/sign_up_password"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
@@ -72,7 +72,7 @@
             android:padding="8dp" />
 
         <Button
-            android:id="@+id/Sign_uo_button"
+            android:id="@+id/Sign_up_button"
             android:layout_width="350dp"
             android:layout_height="70dp"
             android:layout_marginTop="30dp"
