--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/image">
+    android:background="@drawable/image"
+    tools:context=".Login">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome"
+        android:text="@string/welcome"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="60sp"
@@ -23,7 +24,8 @@
         android:orientation="vertical"
         android:padding="20dp"
         android:paddingTop="90dp"
-        android:paddingEnd="10dp">
+        android:paddingEnd="10dp"
+        tools:ignore="RtlSymmetry">
 
         <EditText
             android:id="@+id/login_email"
@@ -31,10 +33,12 @@
             android:layout_height="60dp"
             android:layout_marginTop="80dp"
             android:background="@drawable/lavender_border"
-            android:drawableLeft="@drawable/baseline_email_24"
+            android:drawableStart="@drawable/baseline_email_24"
             android:drawablePadding="8dp"
-            android:hint="Email"
-            android:padding="8dp" />
+            android:hint="@string/email"
+            android:padding="8dp"
+            android:autofillHints=""
+            tools:ignore="TextFields" />
 
         <EditText
             android:id="@+id/login_password"
@@ -42,9 +46,9 @@
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/lavender_border"
-            android:drawableLeft="@drawable/baseline_lock_24"
+            android:drawableStart="@drawable/baseline_lock_24"
             android:drawablePadding="8dp"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:padding="8dp" />
 
@@ -53,9 +57,15 @@
             android:layout_width="350dp"
             android:layout_height="70dp"
             android:layout_marginTop="30dp"
-            android:text="Login"
+            android:text="@string/login"
             android:textSize="18sp"
             app:cornerRadius="30dp" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/progressBar"/>
 
         <TextView
             android:id="@+id/signupRedirectText"
@@ -64,7 +74,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="14dp"
             android:padding="8dp"
-            android:text="Not yet registered? Signup"
+            android:text="@string/not_yet_registered_signup"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
