ADD --Addition of the new Architecture MVC

--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/image"
-    tools:context=".Register">
+    tools:context=".Controlers.Auth.Register">
 
     <TextView
         android:layout_width="wrap_content"
