--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/image"
-    tools:context=".Login">
+    tools:context=".Controlers.Auth.Login">
 
     <TextView
         android:layout_width="wrap_content"
