--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -65,7 +65,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            android:id="@+id/progressBar"/>
+            android:id="@+id/progressBar"
+            android:layout_gravity="center"/>
 
         <TextView
             android:id="@+id/signupRedirectText"
