--- a/app/src/main/res/layout/mainactivity.xml
+++ b/app/src/main/res/layout/mainactivity.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".Views.MainActivityAladdin">
 
     <TextView
         android:id="@+id/text_view"
