--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -6,24 +6,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/image"
-    tools:context=".Controlers.Auth.Register">
+    tools:context=".Controlers.Auth.Register"
+    android:layout_gravity="center"
+    >
+
+    <ImageView
+        android:layout_width="124dp"
+        android:layout_height="137dp"
+        android:layout_gravity="center"
+        android:paddingTop="40dp"
+        android:src="@drawable/logo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_up"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="60sp"
         android:layout_gravity="center"
-        android:layout_marginTop="70dp"  />
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/sign_up"
+        android:textColor="@color/white"
+        android:textSize="60sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="569dp"
+        android:layout_gravity="center"
         android:orientation="vertical"
         android:padding="30dp"
-        android:paddingTop="70dp"
+        android:paddingTop="80dp"
         android:paddingEnd="10dp"
         tools:ignore="RtlSymmetry">
 
@@ -31,52 +41,51 @@
             android:id="@+id/sign_up_name"
             android:layout_width="350dp"
             android:layout_height="60dp"
-            android:layout_marginTop="50dp"
+            android:autofillHints=""
             android:background="@drawable/lavender_border"
             android:drawableStart="@drawable/baseline_accessibility_24"
             android:drawablePadding="8dp"
             android:hint="@string/name"
             android:padding="8dp"
-            android:autofillHints="" />
+            />
 
         <EditText
             android:id="@+id/sign_up_email"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
+            android:autofillHints=""
             android:background="@drawable/lavender_border"
             android:drawableStart="@drawable/baseline_email_24"
             android:drawablePadding="8dp"
             android:hint="@string/register_email"
-            android:padding="8dp"
-            android:autofillHints=""
-             />
+            android:padding="8dp" />
 
         <EditText
             android:id="@+id/sign_up_password"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
+            android:autofillHints=""
             android:background="@drawable/lavender_border"
             android:drawableStart="@drawable/baseline_lock_24"
             android:drawablePadding="8dp"
             android:hint="@string/register_password"
             android:inputType="textPassword"
-            android:padding="8dp"
-            android:autofillHints="" />
+            android:padding="8dp" />
 
         <EditText
             android:id="@+id/confirm_password"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
+            android:autofillHints=""
             android:background="@drawable/lavender_border"
             android:drawableStart="@drawable/baseline_lock_24"
             android:drawablePadding="8dp"
             android:hint="@string/confirm_password"
             android:inputType="textPassword"
-            android:padding="8dp"
-            android:autofillHints="" />
+            android:padding="8dp" />
 
         <Button
             android:id="@+id/Sign_up_button"
@@ -86,13 +95,6 @@
             android:text="@string/sign_up_button"
             android:textSize="18sp"
             app:cornerRadius="30dp" />
-
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:id="@+id/progressBar"
-            android:layout_gravity="center"/>
 
         <TextView
             android:id="@+id/loginRedirectText"
@@ -104,6 +106,13 @@
             android:text="@string/are_you_registered_login"
             android:textColor="@color/white"
             android:textSize="18sp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
 
     </LinearLayout>
 
