--- a/app/src/main/res/layout/activity_place1.xml
+++ b/app/src/main/res/layout/activity_place1.xml
@@ -23,6 +23,19 @@
         android:text="Sousse"
         android:textColor="#FFFFFF" />
 
+    <ImageButton
+        android:id="@+id/btnReturn"
+        android:layout_width="63dp"
+        android:layout_height="73dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="338dp"
+        android:layout_marginTop="14dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/return_button_desc"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_return" />
+
     <!-- RecyclerView pour afficher les images -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
